puprate-deployment.yaml
 
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: puprate-deployment
spec: 
  replicas: 1
  selector: 
    matchLabels: 
      component: web
  template: 
    metadata: 
      labels: 
        component: web
    spec: 
      containers: 
        - name: puprate
          image: brandonjones085/puprate-angular
          ports: 
            - containerPort: 4200
