puprate-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: puprate-cluster-ip-service
spec: 
  type: ClusterIP
  selector: 
    component: web
  ports: 
    - port: 4200
      targetPort: 4200
