ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata: 
  name: ingress-service
  annotations: 
    kubernetes.io/ingress.class: nginx 
    nginx.ingress.kubernetes.io/rewrite-target: /
spec: 
  rules: 
    - http: 
        paths: 
          - path: / 
            backend: 
              serviceName: puprate-cluster-ip-service
              servicePort: 4200
